# core

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: lib.rs
src/pipeline/: encoder.rs  error.rs  handler.rs  mod.rs  transform.rs
src/spec/: encoding.rs  mod.rs  mode.rs  query.rs
