[package]
name = "pxcmprs-core"
version = "0.1.2"
authors = ["Åke Amcoff <ake.amcoff@gmail.com>"]
edition = "2018"
description = "Critical pxcmprs structs and functions."
license = "MIT"

[features]
default = ["pipeline"]
pipeline = ["image", "webp", "gif"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.image]
version = "0.23"
optional = true

[dependencies.webp]
version = "0.1"
optional = true

[dependencies.gif]
version = "0.10"
optional = true

[dependencies]
mime = "0.3"
serde_json = "1"